i18n(about): update ES/FR/PT About content to match EN (A-C-T-S-Y, mission/how/unique/vision/ministry); add how.4; polish CTAs

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -32,24 +32,25 @@
   "donate.receiptNote": "Se enviará un recibo por correo electrónico después del pago.",
 
   "about.title": "Acerca de JirehFaith",
-  "about.p1": "Cuando la vida habla—en gozo, dolor, temor o gratitud—la respuesta más fiel se halla en la Palabra de Dios. JirehFaith es un compañero de oración que lleva la Escritura a las circunstancias cotidianas.",
-  "about.p2": "Arraigado en la promesa de Jehová Jireh—“El Señor proveerá” (Génesis 22:14)—JirehFaith ayuda a los creyentes a responder a situaciones reales con oraciones tejidas con la Escritura, devolviéndonos a la presencia y provisión de Dios.",
+  "about.p1": "Cuando la vida habla—en alegría, dolor, temor o gratitud—la respuesta más poderosa proviene de la Palabra de Dios. Arraigado en la promesa de Jehová-Jireh —«El Señor proveerá» (Génesis 22:14)— JirehFaith es un compañero de oración que lleva la Escritura a las circunstancias cotidianas.",
+  "about.p2": "El Compositor de Oraciones de JirehFaith genera oraciones personalizadas, entretejidas con la Escritura, usando A-C-T-S-Y (Adoración, Confesión/Contrición, Acción de Gracias, Súplica, Rendición), siguiendo el patrón del Padrenuestro (Mateo 6:9–13): Adoración («santificado sea tu nombre», v.9) → Confesión («perdónanos…», v.12) → Acción de Gracias (modelada en toda la Escritura) → Súplica («danos… líbranos», vv.11,13) → Rendición («hágase tu voluntad», v.10). Cada oración incluye versículos bíblicos relevantes para que recibas aliento y crezcas más en la Palabra de Dios.",
   "about.mission.h": "Nuestra Misión",
-  "about.mission.p": "Brindar oraciones personalizadas, tejidas con la Escritura, que encuentren a las personas donde estén—ofreciendo consuelo, ánimo y esperanza—señalando siempre la fidelidad inquebrantable de Dios.",
+  "about.mission.p": "Proveer oraciones personalizadas, tejidas con la Escritura, que encuentren a las personas donde están—ofreciendo consuelo, ánimo y esperanza—y que señalen siempre la fidelidad inmutable de Dios.",
   "about.how.h": "Cómo Funciona",
-  "about.how.1": "Comparte tu necesidad: selecciona tu circunstancia (emoción).",
-  "about.how.2": "Personaliza: haz una pausa en “declara tu condición” y habla directamente con Dios sobre lo que estás enfrentando.",
+  "about.how.1": "Comparte tu necesidad: Selecciona tu circunstancia (emoción).",
+  "about.how.2": "Personaliza: Detente en «declara tu condición» y habla directamente con Dios acerca de lo que enfrentas.",
   "about.how.3": "La Escritura habla: JirehFaith encuentra pasajes bíblicos que hablan a tu situación.",
+  "about.how.4": "Se forma la oración: Se compone una oración sincera—arraigada en la Palabra—para inspirar fe y confianza en la provisión de Dios.",
   "about.unique.h": "Qué Hace Único a JirehFaith",
   "about.unique.1": "Primero la Escritura — Cada oración está anclada en la Biblia.",
-  "about.unique.2": "Sensible a las emociones — Impulsado por el Default Human Logic Layer (DHLL) para reflejar con sensibilidad la experiencia humana.",
+  "about.unique.2": "Sintonía emocional — Impulsado por la Capa Lógica Humana Predeterminada (DHLL) para reflejar las experiencias humanas con sensibilidad.",
   "about.unique.3": "Multilingüe — Disponible en inglés, español, francés y portugués.",
-  "about.unique.4": "Accesible para todos — Oraciones diarias gratuitas; las suscripciones y donaciones sostienen la misión.",
+  "about.unique.4": "Accesible para todos — Oraciones diarias gratuitas; las suscripciones y donaciones ayudan a sostener la misión.",
   "about.vision.h": "Nuestra Visión",
-  "about.vision.p": "Ningún creyente ora solo. Con JirehFaith, cada cristiano lleva un recordatorio vivo de la fidelidad, presencia y provisión de Dios en toda temporada.",
+  "about.vision.p": "Ningún creyente ora solo. Con JirehFaith, cada cristiano lleva en el bolsillo oraciones inspiradas por la Escritura—un recordatorio de la fidelidad, presencia y provisión de Dios en toda temporada.",
   "about.ministry.h": "Nuestro Ministerio",
-  "about.ministry.p": "Apoya la obra mediante donaciones o suscripciones—y comparte estas Escrituras con otros. ¡Que las bendiciones de Dios estén siempre contigo!",
-  "about.blessing": "¡Que las bendiciones de Dios estén siempre contigo!",
+  "about.ministry.p": "Apoya la obra mediante Donaciones o Suscripciones—y comparte estas Escrituras con otros. ¡Las bendiciones de Dios sean siempre contigo!",
+  "about.blessing": "¡Las bendiciones de Dios sean siempre contigo!",
   "about.cta.tech": "Información Técnica",
   "about.cta.donate": "Donar",
 
