--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -3,11 +3,11 @@
   "site.name": "JirehFaith",
   "nav.home": "Accueil",
   "nav.about": "À propos",
-  "nav.donate": "Donner",
-  "nav.techInfo": "Infos Techniques",
+  "nav.donate": "Faire un don",
+  "nav.techInfo": "Infos techniques",
   "hero.title": "JIREH FAITH",
   "hero.tagline": "Quand la vie parle, que la Parole de Dieu réponde.",
-  "composer.placeholder": "Décrivez votre situation ou choisissez une circonstance…",
+  "composer.placeholder": "Décris ta situation ou choisis une circonstance…",
   "composer.compose": "Composer une prière",
   "composer.clear": "Effacer",
   "composer.copy": "Copier",
@@ -15,56 +15,57 @@
   "composer.generatedIn": "Généré en : {{lang}}",
 
   "donate.title": "Soutenir JirehFaith",
-  "donate.lead": "Choisissez un prestataire pour faire un don. Merci de soutenir ce ministère.",
+  "donate.lead": "Choisis un prestataire ci-dessous pour faire un don. Merci de soutenir ce ministère.",
   "donate.stripe": "Donner avec Stripe",
   "donate.paypal": "Donner avec PayPal",
   "donate.applepay": "Donner avec Apple Pay",
   "donate.googlepay": "Donner avec Google Pay",
   "donate.comingSoon": "(bientôt disponible)",
   "donate.note": "Si un bouton est désactivé, ce moyen n’est pas encore disponible.",
-  "donate.walletsNote": "Apple Pay / Google Pay disponibles sur les appareils éligibles lors du paiement.",
-  "donate.amountLabel": "Choisissez un montant",
-  "donate.customAmount": "Ou saisissez un montant personnalisé",
+  "donate.walletsNote": "Apple Pay / Google Pay sont disponibles sur les appareils éligibles lors du paiement.",
+  "donate.amountLabel": "Choisis un montant",
+  "donate.customAmount": "Ou saisis un montant personnalisé",
   "donate.coverFees": "Ajouter un petit supplément pour couvrir les frais de traitement",
   "donate.processing": "Traitement…",
   "donate.openPaypal": "Ouvrir PayPal",
-  "donate.paypalTemporarilyUnavailable": "PayPal est temporairement indisponible. Vous pouvez toujours faire un don en utilisant le lien ci-dessous.",
-  "donate.receiptNote": "Un reçu vous sera envoyé par e-mail après le paiement.",
+  "donate.paypalTemporarilyUnavailable": "PayPal est temporairement indisponible. Tu peux tout de même faire un don via le lien ci-dessous.",
+  "donate.receiptNote": "Un reçu sera envoyé par e-mail après le paiement.",
 
   "about.title": "À propos de JirehFaith",
-  "about.p1": "Quand la vie parle—dans la joie, la peine, la crainte ou la gratitude—la réponse la plus fidèle se trouve dans la Parole de Dieu. JirehFaith est un compagnon de prière qui apporte l’Écriture dans les circonstances du quotidien.",
-  "about.p2": "Ancré dans la promesse de l’Éternel Jiré—« L’Éternel pourvoira » (Genèse 22:14)—JirehFaith aide les croyants à répondre à des situations réelles avec des prières tissées d’Écriture, nous ramenant à la présence et à la provision de Dieu.",
-  "about.mission.h": "Notre Mission",
-  "about.mission.p": "Fournir des prières personnalisées, tissées de l’Écriture, qui rejoignent chacun là où il se trouve—apportant consolation, encouragement et espérance—tout en renvoyant à l’infaillible fidélité de Dieu.",
-  "about.how.h": "Comment ça marche",
-  "about.how.1": "Partagez votre besoin : choisissez votre circonstance (émotion).",
-  "about.how.2": "Personnalisez : faites une pause à « exprimez votre situation » et parlez directement à Dieu de ce que vous traversez.",
-  "about.how.3": "L’Écriture parle : JirehFaith trouve des passages bibliques qui s’adressent à votre situation.",
+  "about.p1": "Quand la vie parle—dans la joie, la tristesse, la peur ou la gratitude—la réponse la plus puissante vient de la Parole de Dieu. Enraciné dans la promesse de Jéhovah-Jireh — « L’Éternel pourvoira » (Genèse 22:14) — JirehFaith est un compagnon de prière qui apporte l’Écriture dans les circonstances du quotidien.",
+  "about.p2": "Le Compositeur de prières JirehFaith génère des prières personnalisées, tissées de l’Écriture, en utilisant A-C-T-S-Y (Adoration, Confession/Contrition, Action de grâces, Supplication, Abandon), selon le modèle de la prière du Seigneur — « Notre Père » (Matthieu 6:9–13) : Adoration (« que ton nom soit sanctifié », v.9) → Confession (« pardonne-nous… », v.12) → Action de grâces (présente dans toute l’Écriture) → Supplication (« donne-nous… délivre-nous », vv.11,13) → Abandon (« que ta volonté soit faite », v.10). Chaque prière inclut des versets bibliques pertinents afin que tu sois encouragé(e) et que tu grandisses dans la Parole de Dieu.",
+  "about.mission.h": "Notre mission",
+  "about.mission.p": "Fournir des prières personnalisées, tissées de l’Écriture, qui rejoignent chacun là où il se trouve—apportant réconfort, encouragement et espérance—tout en renvoyant à l’infaillible fidélité de Dieu.",
+  "about.how.h": "Fonctionnement",
+  "about.how.1": "Partage ton besoin : choisis ta circonstance (émotion).",
+  "about.how.2": "Personnalise : fais une pause à « exprimez votre situation » et parle directement à Dieu de ce que tu traverses.",
+  "about.how.3": "L’Écriture parle : JirehFaith trouve des passages bibliques qui s’adressent à ta situation.",
+  "about.how.4": "La prière est formée : une prière sincère est composée—enracinée dans la Parole—pour inspirer la foi et la confiance en la provision de Dieu.",
   "about.unique.h": "Ce qui rend JirehFaith unique",
-  "about.unique.1": "D’abord l’Écriture — Chaque prière est ancrée dans la Bible.",
-  "about.unique.2": "Sensible aux émotions — Propulsé par le Default Human Logic Layer (DHLL) pour refléter avec finesse l’expérience humaine.",
+  "about.unique.1": "L’Écriture d’abord — Chaque prière est ancrée dans la Bible.",
+  "about.unique.2": "À l’écoute des émotions — Propulsé par la « Default Human Logic Layer » (DHLL) afin de refléter avec sensibilité l’expérience humaine.",
   "about.unique.3": "Multilingue — Disponible en anglais, espagnol, français et portugais.",
-  "about.unique.4": "Accessible à tous — Prières quotidiennes gratuites ; abonnements et dons soutiennent la mission.",
-  "about.vision.h": "Notre Vision",
-  "about.vision.p": "Aucun croyant ne prie seul. Avec JirehFaith, chaque chrétien porte un rappel vivant de la fidélité, de la présence et de la provision de Dieu en toute saison.",
-  "about.ministry.h": "Notre Ministère",
-  "about.ministry.p": "Soutenez l’œuvre par des dons ou des abonnements—et partagez ces Écritures avec d’autres. Que les bénédictions de Dieu soient toujours avec vous !",
-  "about.blessing": "Que les bénédictions de Dieu soient toujours avec vous !",
-  "about.cta.tech": "Infos Techniques",
-  "about.cta.donate": "Donner",
+  "about.unique.4": "Accessible à tous — Prières quotidiennes gratuites ; les abonnements et dons soutiennent la mission.",
+  "about.vision.h": "Notre vision",
+  "about.vision.p": "Aucun croyant ne prie seul. Avec JirehFaith, chaque chrétien porte, dans sa poche, des prières inspirées de l’Écriture—un rappel de la fidélité, de la présence et de la provision de Dieu en toute saison.",
+  "about.ministry.h": "Notre ministère",
+  "about.ministry.p": "Soutiens l’œuvre par des dons ou des abonnements—et partage ces Écritures autour de toi. Que les bénédictions de Dieu soient toujours avec toi !",
+  "about.blessing": "Que les bénédictions de Dieu soient toujours avec toi !",
+  "about.cta.tech": "Infos techniques",
+  "about.cta.donate": "Faire un don",
 
-  "tech.h": "Infos Techniques",
-  "tech.p": "Détails techniques sur la conception et le fonctionnement de JirehFaith.",
-  "tech.metrics.h": "Mesures de Réponse",
-  "tech.metrics.p": "L’application enregistre le temps nécessaire à chaque composition de prière. Le dernier temps de réponse et l’horodatage peuvent être stockés localement dans votre navigateur.",
-  "tech.system.h": "Informations Système",
+  "tech.h": "Infos techniques",
+  "tech.p": "Détails techniques sur la façon dont JirehFaith est construit et fonctionne.",
+  "tech.metrics.h": "Mesures de réponse",
+  "tech.metrics.p": "L’application enregistre le temps de traitement de chaque composition de prière. Le dernier temps de réponse et l’horodatage peuvent être stockés localement dans ton navigateur.",
+  "tech.system.h": "Informations système",
   "tech.system.items.framework": "Framework : Next.js (App Router)",
   "tech.system.items.styling": "Styles : Tailwind CSS avec variables de marque personnalisées",
-  "tech.system.items.state": "Gestion d’état : Hooks React (et éventuellement TanStack Query)",
-  "tech.system.items.backend": "Backend : API DHLL pour une composition de prière sensible au contexte",
-  "tech.diagnostics.h": "Diagnostics",
-  "tech.diagnostics.p": "De futures versions pourront afficher ici des journaux requête/réponse et des panneaux de débogage technique, plutôt que sur la page principale de prière.",
-  "tech.build.h": "Infos de Build",
+  "tech.system.items.state": "Gestion d’état : React hooks (et éventuellement TanStack Query)",
+  "tech.system.items.backend": "Backend : API DHLL pour la composition de prières sensible au contexte",
+  "tech.diagnostics.h": "Diagnostic",
+  "tech.diagnostics.p": "De futures versions pourront afficher ici des journaux de requêtes/réponses et des panneaux de débogage technique au lieu de la page principale de prière.",
+  "tech.build.h": "Informations de build",
   "tech.build.version_label": "Version :",
   "tech.build.commit_label": "Commit :",
   "tech.build.date_label": "Date de build :",
@@ -77,7 +78,7 @@
   "lang.es": "Espagnol",
   "lang.fr": "Français",
   "lang.pt": "Portugais",
-  "page.title": "Compositeur de prières avec la Sainte Bible",
+  "page.title": "Compositeur de prières avec les Saintes Écritures",
   "input.emotion": "Émotion",
 
   "emotion.anxiety": "Anxiété",
@@ -93,7 +94,7 @@
   "emotion.illness": "Maladie",
   "emotion.despair": "Désespoir",
   "emotion.peace": "Paix",
-  "emotion.success": "Succès",
+  "emotion.success": "Réussite",
   "emotion.protection": "Protection",
 
   "output.prayer": "Prière",
