--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -14,15 +14,15 @@
   "composer.copied": "Copiado!",
   "composer.generatedIn": "Gerado em: {{lang}}",
 
-  "donate.title": "Apoie o JirehFaith",
-  "donate.lead": "Escolha um provedor abaixo para fazer uma doação. Obrigado por sustentar este ministério.",
+  "donate.title": "Apoie a JirehFaith",
+  "donate.lead": "Escolha um provedor abaixo para fazer uma doação. Obrigado por apoiar este ministério.",
   "donate.stripe": "Doar com Stripe",
   "donate.paypal": "Doar com PayPal",
   "donate.applepay": "Doar com Apple Pay",
   "donate.googlepay": "Doar com Google Pay",
   "donate.comingSoon": "(em breve)",
   "donate.note": "Se um botão estiver desativado, esse meio ainda não está disponível.",
-  "donate.walletsNote": "Apple Pay / Google Pay disponíveis em dispositivos elegíveis no checkout.",
+  "donate.walletsNote": "Apple Pay / Google Pay disponíveis em dispositivos elegíveis durante o pagamento.",
   "donate.amountLabel": "Escolha um valor",
   "donate.customAmount": "Ou insira um valor personalizado",
   "donate.coverFees": "Adicionar um pequeno extra para cobrir as taxas de processamento",
@@ -31,43 +31,44 @@
   "donate.paypalTemporarilyUnavailable": "O PayPal está temporariamente indisponível. Você ainda pode doar usando o link abaixo.",
   "donate.receiptNote": "Um recibo será enviado por e-mail após o pagamento.",
 
-  "about.title": "Sobre o JirehFaith",
-  "about.p1": "Quando a vida fala—em alegria, dor, temor ou gratidão—a resposta mais fiel está na Palavra de Deus. JirehFaith é um companheiro de oração que leva a Escritura às circunstâncias do dia a dia.",
-  "about.p2": "Enraizado na promessa de Jeová Jiré—“O Senhor proverá” (Gênesis 22:14)—o JirehFaith ajuda os crentes a responder a situações reais com orações entrelaçadas com a Escritura, levando-nos de volta à presença e à provisão de Deus.",
+  "about.title": "Sobre a JirehFaith",
+  "about.p1": "Quando a vida fala—em alegria, tristeza, medo ou gratidão—a resposta mais poderosa vem da Palavra de Deus. Enraizada na promessa de Jeová-Jiré — «O Senhor proverá» (Gênesis 22:14) — a JirehFaith é uma companheira de oração que traz a Escritura para as circunstâncias do dia a dia.",
+  "about.p2": "O Compositor de Orações JirehFaith gera orações personalizadas, entretecidas com a Escritura, usando A-C-T-S-Y (Adoração, Confissão/Contrição, Ação de Graças, Súplica, Rendição), seguindo o padrão da Oração do Senhor — «Pai Nosso» (Mateus 6:9–13): Adoração («santificado seja o teu nome», v.9) → Confissão («perdoa-nos…», v.12) → Ação de Graças (modelada em toda a Escritura) → Súplica («dá-nos… livra-nos», vv.11,13) → Rendição («seja feita a tua vontade», v.10). Cada oração inclui versículos bíblicos relevantes para que você receba encorajamento e cresça mais na Palavra de Deus.",
   "about.mission.h": "Nossa Missão",
-  "about.mission.p": "Fornecer orações personalizadas, entrelaçadas com a Escritura, que encontrem as pessoas onde elas estão—trazendo consolo, encorajamento e esperança—apontando sempre para a fidelidade infalível de Deus.",
+  "about.mission.p": "Prover orações personalizadas, tecidas com a Escritura, que encontrem as pessoas onde estão—oferecendo consolo, encorajamento e esperança—apontando sempre para a fidelidade infalível de Deus.",
   "about.how.h": "Como Funciona",
-  "about.how.1": "Compartilhe sua necessidade: selecione sua circunstância (emoção).",
-  "about.how.2": "Personalize: faça uma pausa em “diga a sua condição” e fale diretamente com Deus sobre o que você está enfrentando.",
-  "about.how.3": "A Escritura fala: o JirehFaith encontra passagens bíblicas que falam à sua situação.",
-  "about.unique.h": "O que Torna o JirehFaith Único",
-  "about.unique.1": "Primeiro a Escritura — Toda oração é ancorada na Bíblia.",
-  "about.unique.2": "Sensível às emoções — Impulsionado pelo Default Human Logic Layer (DHLL) para refletir com sensibilidade a experiência humana.",
+  "about.how.1": "Compartilhe sua necessidade: Selecione sua circunstância (emoção).",
+  "about.how.2": "Personalize: Faça uma pausa em «diga a sua condição» e fale diretamente com Deus sobre o que você está enfrentando.",
+  "about.how.3": "A Escritura fala: A JirehFaith encontra passagens bíblicas que falam à sua situação.",
+  "about.how.4": "A oração é formada: Uma oração sincera é composta—enraizada na Palavra—para inspirar fé e confiança na provisão de Deus.",
+  "about.unique.h": "O que torna a JirehFaith única",
+  "about.unique.1": "Escritura em primeiro lugar — Cada oração é ancorada na Bíblia.",
+  "about.unique.2": "Sintonizada emocionalmente — Impulsionada pela Camada Lógica Humana Padrão (DHLL) para refletir as experiências humanas com sensibilidade.",
   "about.unique.3": "Multilíngue — Disponível em inglês, espanhol, francês e português.",
-  "about.unique.4": "Acessível a todos — Orações diárias gratuitas; assinaturas e doações sustentam a missão.",
+  "about.unique.4": "Acessível a todos — Orações diárias gratuitas; assinaturas e doações ajudam a sustentar a missão.",
   "about.vision.h": "Nossa Visão",
-  "about.vision.p": "Nenhum crente ora sozinho. Com o JirehFaith, todo cristão carrega um lembrete vivo da fidelidade, presença e provisão de Deus em toda estação.",
+  "about.vision.p": "Nenhum crente ora sozinho. Com a JirehFaith, cada cristão traz no bolso orações inspiradas na Escritura—um lembrete da fidelidade, presença e provisão de Deus em toda estação.",
   "about.ministry.h": "Nosso Ministério",
-  "about.ministry.p": "Apoie a obra por meio de doações ou assinaturas—e compartilhe estas Escrituras com outros. As bênçãos de Deus estejam sempre com você!",
+  "about.ministry.p": "Apoie a obra por meio de Doações ou Assinaturas—e compartilhe estas Escrituras com outros. As bênçãos de Deus estejam sempre com você!",
   "about.blessing": "As bênçãos de Deus estejam sempre com você!",
-  "about.cta.tech": "Informações Técnicas",
+  "about.cta.tech": "Informações técnicas",
   "about.cta.donate": "Doar",
 
-  "tech.h": "Informações Técnicas",
-  "tech.p": "Detalhes técnicos sobre como o JirehFaith é construído e como funciona.",
-  "tech.metrics.h": "Métricas de Resposta",
-  "tech.metrics.p": "O aplicativo registra quanto tempo cada solicitação de composição de oração leva para ser processada. O último tempo de resposta e o carimbo de data/hora podem ser armazenados localmente no seu navegador.",
-  "tech.system.h": "Informações do Sistema",
+  "tech.h": "Informações técnicas",
+  "tech.p": "Detalhes técnicos sobre como a JirehFaith é construída e como funciona.",
+  "tech.metrics.h": "Métricas de resposta",
+  "tech.metrics.p": "O aplicativo registra quanto tempo leva cada solicitação de composição de oração. O último tempo de resposta e o carimbo de data/hora podem ser armazenados localmente no seu navegador.",
+  "tech.system.h": "Informações do sistema",
   "tech.system.items.framework": "Framework: Next.js (App Router)",
   "tech.system.items.styling": "Estilos: Tailwind CSS com variáveis de marca personalizadas",
-  "tech.system.items.state": "Gerenciamento de estado: Hooks do React (e opcionalmente TanStack Query)",
-  "tech.system.items.backend": "Backend: API DHLL para composição de orações sensível ao contexto",
+  "tech.system.items.state": "Gerenciamento de estado: React hooks (e opcionalmente TanStack Query)",
+  "tech.system.items.backend": "Backend: API DHLL para composição de orações com consciência de contexto",
   "tech.diagnostics.h": "Diagnóstico",
-  "tech.diagnostics.p": "Versões futuras podem exibir aqui registros de requisições/respostas e painéis de depuração técnica, em vez da página principal de oração.",
-  "tech.build.h": "Informações de Build",
+  "tech.diagnostics.p": "Versões futuras poderão exibir aqui registros de requisições/respostas e painéis de depuração técnica em vez da página principal de oração.",
+  "tech.build.h": "Informações de build",
   "tech.build.version_label": "Versão:",
   "tech.build.commit_label": "Commit:",
-  "tech.build.date_label": "Data de build:",
+  "tech.build.date_label": "Data da build:",
   "tech.build.repo_text": "Ver repositório",
   "tech.build.repo_aria": "Abrir o repositório em uma nova aba",
   "tech.build.repo_title": "Abrir o repositório em uma nova aba",
@@ -83,13 +84,13 @@
   "emotion.anxiety": "Ansiedade",
   "emotion.grief": "Luto",
   "emotion.fear": "Medo",
-  "emotion.anger": "Raiva",
+  "emotion.anger": "Ira",
   "emotion.love": "Amor",
   "emotion.perseverance": "Perseverança",
   "emotion.hope": "Esperança",
   "emotion.joy": "Alegria",
   "emotion.financial_trials": "Provações financeiras",
-  "emotion.relationship_trials": "Provações relacionais",
+  "emotion.relationship_trials": "Provações nos relacionamentos",
   "emotion.illness": "Doença",
   "emotion.despair": "Desespero",
   "emotion.peace": "Paz",
@@ -109,6 +110,6 @@
   "acts.confession": "Confissão",
   "acts.thanksgiving": "Ação de Graças",
   "acts.supplication": "Súplica",
-  "acts.yielding": "Render-se",
-  "acts.yielding_listening": "Render-se / Escutar"
+  "acts.yielding": "Rendição",
+  "acts.yielding_listening": "Rendição / Escuta"
 }
